[package]
name = "ngboost-rs"
version = "1.1.1"
edition = "2024"
authors = ["Felix Agene agene001@umn.edu>"]
description = "Natural Gradient Boosting for Probabilistic Prediction - A Rust implementation of NGBoost"
license = "MIT"
repository = "https://github.com/agene0001/ngboost-rs"
documentation = "https://docs.rs/ngboost-rs"
readme = "README.md"
keywords = ["machine-learning", "gradient-boosting", "probabilistic", "uncertainty", "ngboost"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-linalg = "0.18.1"
statrs = "0.18.0"
rand = "0.10.0-rc.6"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rayon = { version = "1.11.0", optional = true }

# Optional BLAS backends - user must enable one
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
openblas-src = { version = "0.10.14", optional = true, features = ["cblas", "lapacke"] }

[dev-dependencies]
ndarray-rand = "0.16.0"
tempfile = "3.24.0"
accelerate-src = "0.3.2"
approx = "0.5.1"

[features]
default = ["parallel"]
# BLAS backend features - user must choose one
accelerate = ["accelerate-src"]
intel-mkl = ["intel-mkl-src"]
openblas = ["openblas-src"]
# Enable parallel training of base learners
parallel = ["rayon"]

[[example]]
name = "regression"
path = "examples/regression.rs"

[[example]]
name = "classification"
path = "examples/classification.rs"

[[example]]
name = "distributions"
path = "examples/distributions.rs"

[[example]]
name = "uncertainty"
path = "examples/uncertainty.rs"

[[example]]
name = "survival"
path = "examples/survival.rs"

[[example]]
name = "multiclass"
path = "examples/multiclass.rs"

[[example]]
name = "advanced_options"
path = "examples/advanced_options.rs"

[package.metadata.docs.rs]
features = ["openblas"]

# Optimization settings for release builds
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
[profile.production]
inherits = "release"
# For even faster builds during development
[profile.dev]
opt-level = 1

# Fast debug builds with some optimization
[profile.dev.package."*"]
opt-level = 2
