[package]
name = "ngboost-rs"
version = "1.1.1"
edition = "2024"
authors = ["Felix Agene agene001@umn.edu>"]
description = "Natural Gradient Boosting for Probabilistic Prediction - A Rust implementation of NGBoost"
license = "MIT"
repository = "https://github.com/agene0001/ngboost-rs"
documentation = "https://docs.rs/ngboost-rs"
readme = "README.md"
keywords = ["machine-learning", "gradient-boosting", "probabilistic", "uncertainty", "ngboost"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-linalg = "0.18.1"
statrs = "0.18.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rayon = { version = "1.11.0", optional = true }
bumpalo = { version = "3.19.1", features = ["collections"] }
typed-arena = "2.0.2"

# Hyperparameter optimization (tpe uses rand 0.8, so we pull rand 0.8 under
# the `rand_compat` alias for TPE's RNG interop — same trick as gradientlss-rs).
tpe = "0.2.0"
rand_compat = { package = "rand", version = "0.8" }
serde_json = "1.0"

# Optional BLAS backends - user must enable one
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
openblas-src = { version = "0.10.14", optional = true, features = ["cblas", "lapacke"] }
wide = { version = "1.5.0", optional = true }

[dev-dependencies]
ndarray-rand = "0.16.0"
tempfile = "3.25.0"
approx = "0.5.1"
criterion = { version = "0.8.2", features = ["html_reports"] }

# Apple-only BLAS for tests/benches. Gated so non-macOS hosts can run
# `cargo test` against an openblas/intel-mkl build.
[target.'cfg(target_os = "macos")'.dev-dependencies]
accelerate-src = "0.3.2"

[features]
default = ["parallel"]
# BLAS backend features - user must choose one
accelerate = ["accelerate-src"]
intel-mkl = ["intel-mkl-src", "ndarray-linalg/intel-mkl-static"]
openblas = ["openblas-src", "ndarray-linalg/openblas-system"]
# Enable parallel training of base learners
parallel = ["rayon"]
# Portable SIMD exp via the `wide` crate for non-macOS hot paths (macOS with
# `accelerate` always prefers vForce). OPT-IN, and on x86-64 it REQUIRES
# building with `RUSTFLAGS="-C target-cpu=native"` (or +avx2): the default
# baseline target is SSE2-only, where f64x4 lowers to 2x128-bit and exp runs
# 0.6-0.8x SLOWER than libm. Measured with AVX2 on x86-64 Windows: exp
# 1.7-1.9x, ln 3.0-3.5x, max 1 ulp from libm. On Apple Silicon leave this off
# (NEON is 128-bit; ~0.4x) — vForce covers macOS anyway. Verify on a new
# machine with `cargo run --release --example bench_wide`.
simd-math = ["dep:wide"]

[[example]]
name = "regression"
path = "examples/regression.rs"

[[example]]
name = "classification"
path = "examples/classification.rs"

[[example]]
name = "distributions"
path = "examples/distributions.rs"

[[example]]
name = "uncertainty"
path = "examples/uncertainty.rs"

[[example]]
name = "survival"
path = "examples/survival.rs"

[[example]]
name = "multiclass"
path = "examples/multiclass.rs"

[[example]]
name = "advanced_options"
path = "examples/advanced_options.rs"

[[example]]
name = "bench_wide"
path = "examples/bench_wide.rs"
required-features = ["simd-math"]

[package.metadata.docs.rs]
features = ["openblas"]

# Benchmark configuration
[[bench]]
name = "benchmarks"
harness = false

# Optimization settings for release builds
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"  # Smaller binaries, no unwinding overhead

[profile.production]
inherits = "release"

# For even faster builds during development
[profile.dev]
opt-level = 1

# Fast debug builds with some optimization
[profile.dev.package."*"]
opt-level = 2

# Faster proc-macro compilation
[profile.release.build-override]
opt-level = 0

# Benchmark profile - like release but with debug symbols for profiling
[profile.bench]
inherits = "release"
debug = 2  # Full debug info for flamegraphs
strip = false  # release's strip=true would discard the debug info above
